fix gap main page

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 50px;
 }
 
 .section__1,
@@ -14,7 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 }
 
@@ -137,8 +138,6 @@
 .section__3 {
   display: flex;
   justify-content: space-evenly;
-  width: 100vw;
-  height: 100%;
 
   -webkit-animation: scale-in-center 1s cubic-bezier(0.175, 0.885, 0.32, 1.275)
     forwards;
