--- a/src/components/LangAdvice/styles.module.css
+++ b/src/components/LangAdvice/styles.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   gap: 100px;
-  height: 100vh;
+  height: 100%;
 }
 
 .scale__in__center {
